--- a/source/less/common.less
+++ b/source/less/common.less
@@ -5,14 +5,18 @@
 
 
 body {
-  font-family: 'PT Sans';
+  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
   margin: 0 auto;
   width: 320px;
 
   background-color: #f2f2f2;
 
   outline: 2px solid pink;
+}
 
+input,
+textarea {
+  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
 }
 
 div,
