--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -88,6 +88,10 @@
   width: 23px;
 
   background: none;
+
+  outline: none;
+
+  cursor: pointer;
 }
 
 .main-nav__close {
@@ -135,11 +139,23 @@
     transparent 20px);
 }
 
-.main-nav__list {
+.menu-off {
   display: none;
 }
 
+.menu-on {
+  display: block;
+}
+
 .main-nav__close {
+  outline: none;
+}
+
+.close__on {
+  display: block;
+}
+
+.close__off {
   display: none;
 }
 
