--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -73,15 +73,15 @@
   }
 }
 
-.twitter svg {
+.social__link.twitter svg {
   width: 18px;
 }
 
-.facebook svg {
+.social__link.facebook svg {
   width: 9px;
 }
 
-.youtube svg {
+.social__link.youtube svg {
   width: 20px;
 }
 
