--- a/source/less/map.less
+++ b/source/less/map.less
@@ -23,7 +23,7 @@
 
 @media(min-width: 768px) {
   .map__wrapper {
-    background-image: url(../img/map-tablet.jpg);  
+    background-image: url(../img/map-tablet.webp);  
   }
 }
 
@@ -31,6 +31,6 @@
 
 @media(min-width: 1200px) {
   .map__wrapper {
-    background-image: url(../img/map-desktop.jpg);
+    background-image: url(../img/map-desktop.webp);
   }
 }
